--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=1024" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <title>Beach Wreck Ignition: Challenges in open source voice</title>
+    <title>Intro to the Open Source Voice Stack</title>
 
     <meta name="description" content="Presentation to linux.conf.au 2019, Christchurch, 24 January 2019" />
     <meta name="author" content="Kathy Reid <kathy@kathyreid.id.au>" />
 
-    <link href="css/beachwreckignition.css" rel="stylesheet" />
+    <link href="css/intro-open-source-voice.css" rel="stylesheet" />
 
     <link rel="shortcut icon" href="favicon.png" />
 </head>
@@ -36,8 +36,8 @@
 
   <div id="intro" class="step" data-x="0" data-y="0">
     <div class="step-container container-width-50">
-      <h1>Beach Wreck Ignition:</h1>
-      <h2>Challenges in open source voice</h2>
+      <h1>Intro to the open source voice stack</h1>
+      <h2>A brief overview using Mycroft AI</h2>
       <h3>Kathy Reid <span class="highlight mixedCase">@KathyReid</span></h3>
       <h3><em>(formerly) Director of Developer Relations, <span class="highlight mixedCase">@Mycroft_AI</span></em></h3>
       <p class="attribution"><strong>Attribution</strong>: <a href="https://flic.kr/p/8ykkny">Vanity 365 Day 55</em> via Rocky Sun on Flickr.</a></p>
@@ -48,7 +48,6 @@
     <div class="step-container">
       <h1>Overview</h1>
       <ul class="bulletedList">
-        <li><strong>Voice Stack</strong> -  components that make up a voice stack</li>
         <li><strong>Wake Word</strong> - detection that the user wants to issue a command</li>
         <li><strong>Speech to Text</strong> - transcribing voice sounds into written form</li>
         <li><strong>Intent matching</strong> - matching utterances to a command</li>
@@ -59,16 +58,6 @@
     </div>
   </div>
 
-  <div id="kitt" class="step" data-x="4000" data-y="0">
-    <p class="attribution"><strong>Attribution</strong>: <a href="https://flic.kr/p/24kaPXy">Kitt aus Knight Rider</em> via Marco Verch on Flickr.</a></p>
-  </div>
-
-  <div id="lcars" class="step" data-x="4000" data-y="0">
-    <p class="attribution"><strong>Attribution</strong>: <a href="https://commons.wikimedia.org/wiki/File:Lcars_wallpaper.gif">LCARS desktop</em> via Morn on Wikimedia Commons.</a></p>
-  </div>
-
-  <div id="timetrax" class="step" data-x="4000" data-y="0">
-  </div>
 
   <div id="voicestack" class="step" data-x="2000" data-y="0">
     <div class="step-container">
